1999-03-05  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acjdk.m4 to EXTRA_DIST.

	* acjdk.m4: New file.
	(vj_FIND_JDK): Locates JDK through javac path.
	(vj_DISABLE_JAVA): Parsing of --enable-java and --disable-java.

1999-03-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acobjclibs.m4 (md_CHECK_OBJC_LIBS): Add "-x none" after
	filename.  With Checker, there is an object file added, which
	must not be compiled.

1999-02-15  Alex Lancaster  <alex@santafe.edu>

	* acffi.m4 (md_FIND_FFI): Reverse order of test - look in $ffidir
	before looking in `/usr'.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (md_FIND_TCLTK_SCRIPTS): Test $_prefix/share as
	well (e.g. Cygwin).

1999-02-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (md_FIND_TCLTK_SCRIPTS, md_FIND_TCL_SCRIPTS,
	md_FIND_TK_SCRIPTS): New macros.

1999-01-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acfind.m4 (_libdir): Handle --without-* case; skip the search.

1999-01-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (INCPLACES, LIBPLACES): Remove B19 guess.
	(LIBPLACES): Update CYGFS path to be for B20.

1999-01-26  Alex Lancaster  <alex@santafe.edu>

	* acswarm.m4 (al_INIT_SWARM): Include AM_PROG_LIBTOOL macros.

1999-01-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acexesuffix.m4, acguilibs.m4, aclinkflags.m4, acxpm.m4:
	Use __CYGWIN__ instead of __CYGWIN32__.

1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acfind.m4: Expand includedir before comparing against /usr/include.

1999-01-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* acffi.m4 (FFILDFLAGS): Use -rpath instead of $RPATH.

	* acfind.m4 (_ldflags): Likewise.

	* actcltk.m4 (TCLLDFLAGS, TKLDFLAGS): Likewise.

	* acrpath.m4: Removed.

	* Makefile.am (EXTRADIST): Remove acrpath.m4.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* actcltk.m4 (INCPLACES): Add /Cygnus/cygwin-b20/include.