@@ -1,3 +1,9 @@
+1999-03-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* acjdk.m4 (vj_DISABLE_JAVA): Remove.
+	(vj_FIND_JDK): Clear jdkdir if "no" (use empty
+	jdkdir as enable/disable flag).  Add messages.
+
 1999-03-05  Vladimir Jojic  <vjojic@chama.santafe.edu>
 
 	* Makefile.am (EXTRA_DIST): Add acjdk.m4 to EXTRA_DIST.
